Create LegendItem, which represents a colored dot next to a description.
Include Legend in FileIDInfo.fxml and RestructureTreeUI.fxml.

Made TreeEditing undoable by implementing TreeEditorMockCommand and UndoableANodeTreeViewEditor and fixing TreeRestructuring, TreeViewSetup and some other things.

TreeViewSetup no longer modifies the tree itself but instead relies on UndoableANodeTreeViewEditor.

Implement a root logger which can be used by defining the static logger in any class using the class.name.